RESOLVED FIXED128463
[GTK] Minibrowser: During text search, make navigation through list of matched words circular
https://bugs.webkit.org/show_bug.cgi?id=128463
Summary [GTK] Minibrowser: During text search, make navigation through list of matche...
Diego Pino
Reported 2014-02-08 11:46:04 PST
Navigation through the list of matched search results using the 'Up' and 'Down' buttons doesn't work correctly. When the user reaches the last word, pressing the 'Down' button goes back to the search box and all highlighted words are unhighlighted. Pressing 'Down' again goes to the the first word although the matched words keep unhighlighted. The same happens in the opposite case, when reaching the first matched word and pressing 'Up'. Steps to reproduce: 1. In Minibrowser, Press 'Ctrl+F' to open up the search box. 2. Keep pressing button 'Down' until reaching the last matched element. 3. Press 'Down' again. Expected result: Navigation goes back to the first element. All the words keep highlighted. Actual result: Navigation goes back to the search box, the search box background becomes red and all highlighted words are unhighlighted.
Attachments
Patch (1.60 KB, patch)
2014-02-09 03:27 PST, Diego Pino
no flags
Patch (1.65 KB, patch)
2014-02-10 04:16 PST, Diego Pino
no flags
Diego Pino
Comment 1 2014-02-09 03:27:30 PST
Carlos Garcia Campos
Comment 2 2014-02-10 03:36:11 PST
Comment on attachment 223625 [details] Patch Thanks
WebKit Commit Bot
Comment 3 2014-02-10 03:37:27 PST
Comment on attachment 223625 [details] Patch Rejecting attachment 223625 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 223625, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/6053250067333120
Diego Pino
Comment 4 2014-02-10 04:16:11 PST
WebKit Commit Bot
Comment 5 2014-02-10 04:57:36 PST
Comment on attachment 223693 [details] Patch Clearing flags on attachment: 223693 Committed r163778: <http://trac.webkit.org/changeset/163778>
WebKit Commit Bot
Comment 6 2014-02-10 04:57:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.