[GTK] Minibrowser: During text search, make navigation through list of matched words circular https://bugs.webkit.org/show_bug.cgi?id=128463

Patch by Diego Pino Garcia <dpino@igalia.com> on 2014-02-10
Reviewed by Carlos Garcia Campos.

Initialize search options to WEBKIT_FIND_OPTIONS_WRAP_AROUND to make navigation
circular.

* MiniBrowser/gtk/BrowserSearchBar.c:
(doSearch):

Canonical link: https://commits.webkit.org/146540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163778 268f45cc-cd09-0410-ab3c-d52691b4dbfc